--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "framer-motion": "^12.29.2",
+    "lucide-react": "^0.344.0",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "swiper": "^11.2.10",
+    "zustand": "^4.5.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
